[package]
name = "gfx-chain"
version = "0.1.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
description = "Synchronize access to GPU resource as if it is an easy task"
keywords = ["graphics", "vulkan", "gfx-hal"]

repository = "https://github.com/omni-viral/chains.git"

readme = "README.md"
license = "MIT/Apache-2.0"

[profile.release]
debug = 2

[dependencies]
derivative = "1.0"
gfx-hal = { version = "0.1.0", git = "https://github.com/gfx-rs/gfx", rev = "1e959ace6" }
log = "0.4"

[dev-dependencies]
clap = "2.31"
rand = "0.4"
